# multimodal-ecg-text-transformer

./: .gitignore  README.md  pyproject.toml
configs/: config.py
results/: stage_a_final_metrics.json  stage_a_per_example.csv  stage_b_final_metrics.json  stage_b_per_example.csv  stage_c_final_metrics.json  stage_c_per_example.csv
scripts/: evaluate_final.py  export_onnx.py  precompute_fusion_features.py  precompute_text_features.py  preprocess_data.py  register_model.py
src/data/: dataset.py  preprocess.py  text.py
src/models/: classifier.py  depthwise_se_stem.py  fusion.py  model.py  multiscale_stem.py  signal_encoder.py  text_encoder.py
src/training/: bias_adjustment.py  checkpoint_utils.py  evaluate.py  focal_loss.py  train.py  utils.py
tests/: test_checkpoint_utils.py  test_evaluation.py  test_export.py  test_model.py  test_preprocessing.py
