[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-ecg-text-transformer"
version = "0.1.0"
description = "Multimodal transformer fusing 12-lead ECG waveforms with cardiologist report text for diagnostic classification"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Deep learning
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    # Pretrained language models
    "transformers>=4.38.0",
    # ONNX export and inference
    "onnx>=1.16.0",
    "onnxruntime>=1.17.0",
    # Config management
    "hydra-core>=1.3.2",
    "hydra-zen>=0.13.0",
    # Experiment tracking
    "mlflow>=2.11.0",
    # Serving
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    # ECG data loading
    "wfdb>=4.1.0",
    # Data and numerics
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # HTTP client (for benchmark script)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]